syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rpc.itrail";

message PersonRequest{
    int64 id = 1;
}

message PersonResponse {
    int64 id = 1;
    string name  = 2;
    string login = 3;
    string phone = 4;
    int64 wallet = 5;
}

message ListPerson{
    repeated PersonResponse personResponse = 5 ; 
}

service PersonService {
  rpc findById( PersonRequest ) returns ( PersonResponse ) {};
  rpc findAll( PersonRequest ) returns ( ListPerson ) {};
}
